  PR java/12548   * resource.c (write_resource_constructor): Append   "_resource" to constructor identifier name.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@73940 138bc75d-0d04-0410-961f-82ee72b054a4